// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Dropdown basic 1`] = `
<div
  style={
    Object {
      "margin": "40px",
    }
  }
>
  <div>
    <div
      className="css-10nd86i sc-fjdhpX hIxaWA"
      onKeyDown={[Function]}
    >
      <div
        className="css-vj8t7z react-select__control"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className="css-1hwfws3 react-select__value-container"
        >
          <div
            className="css-1492t68 react-select__placeholder"
          >
            Wybierz...
          </div>
          <div
            className="css-1g6gooi"
          >
            <div
              className="react-select__input"
              style={
                Object {
                  "display": "inline-block",
                }
              }
            >
              <input
                aria-autocomplete="list"
                autoCapitalize="none"
                autoComplete="off"
                autoCorrect="off"
                disabled={false}
                id="react-select-2-input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                spellCheck="false"
                style={
                  Object {
                    "background": 0,
                    "border": 0,
                    "boxSizing": "content-box",
                    "color": "inherit",
                    "fontSize": "inherit",
                    "opacity": 1,
                    "outline": 0,
                    "padding": 0,
                    "width": "1px",
                  }
                }
                tabIndex="0"
                type="text"
                value=""
              />
              <div
                style={
                  Object {
                    "height": 0,
                    "left": 0,
                    "overflow": "scroll",
                    "position": "absolute",
                    "top": 0,
                    "visibility": "hidden",
                    "whiteSpace": "pre",
                  }
                }
              >
                
              </div>
            </div>
          </div>
        </div>
        <div
          className="css-1wy0on6 react-select__indicators"
        >
          <span
            className="css-d8oujb react-select__indicator-separator"
          />
          <div
            aria-hidden="true"
            className="css-1ep9fjw react-select__indicator react-select__dropdown-indicator"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <svg
              aria-hidden="true"
              className="css-19bqh2r"
              focusable="false"
              height={20}
              viewBox="0 0 20 20"
              width={20}
            >
              <path
                d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Dropdown custom placeholder 1`] = `
<div
  style={
    Object {
      "margin": "40px",
    }
  }
>
  <div>
    <div
      className="css-10nd86i sc-fjdhpX hIxaWA"
      onKeyDown={[Function]}
    >
      <div
        className="css-vj8t7z react-select__control"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className="css-1hwfws3 react-select__value-container"
        >
          <div
            className="css-1492t68 react-select__placeholder"
          >
            Custom Placeholder Text
          </div>
          <div
            className="css-1g6gooi"
          >
            <div
              className="react-select__input"
              style={
                Object {
                  "display": "inline-block",
                }
              }
            >
              <input
                aria-autocomplete="list"
                autoCapitalize="none"
                autoComplete="off"
                autoCorrect="off"
                disabled={false}
                id="react-select-6-input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                spellCheck="false"
                style={
                  Object {
                    "background": 0,
                    "border": 0,
                    "boxSizing": "content-box",
                    "color": "inherit",
                    "fontSize": "inherit",
                    "opacity": 1,
                    "outline": 0,
                    "padding": 0,
                    "width": "1px",
                  }
                }
                tabIndex="0"
                type="text"
                value=""
              />
              <div
                style={
                  Object {
                    "height": 0,
                    "left": 0,
                    "overflow": "scroll",
                    "position": "absolute",
                    "top": 0,
                    "visibility": "hidden",
                    "whiteSpace": "pre",
                  }
                }
              >
                
              </div>
            </div>
          </div>
        </div>
        <div
          className="css-1wy0on6 react-select__indicators"
        >
          <span
            className="css-d8oujb react-select__indicator-separator"
          />
          <div
            aria-hidden="true"
            className="css-1ep9fjw react-select__indicator react-select__dropdown-indicator"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <svg
              aria-hidden="true"
              className="css-19bqh2r"
              focusable="false"
              height={20}
              viewBox="0 0 20 20"
              width={20}
            >
              <path
                d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Dropdown disabled 1`] = `
<div
  style={
    Object {
      "margin": "40px",
    }
  }
>
  <div>
    <div
      className="css-1sontr1 sc-fjdhpX hIxaWA react-select--is-disabled"
      onKeyDown={[Function]}
    >
      <div
        className="css-162g8z5 react-select__control react-select__control--is-disabled"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className="css-1hwfws3 react-select__value-container"
        >
          <div
            className="css-1492t68 react-select__placeholder"
          >
            Wybierz...
          </div>
          <div
            className="css-1g6gooi"
          >
            <div
              className="react-select__input"
              style={
                Object {
                  "display": "inline-block",
                }
              }
            >
              <input
                aria-autocomplete="list"
                autoCapitalize="none"
                autoComplete="off"
                autoCorrect="off"
                disabled={true}
                id="react-select-3-input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                spellCheck="false"
                style={
                  Object {
                    "background": 0,
                    "border": 0,
                    "boxSizing": "content-box",
                    "color": "inherit",
                    "fontSize": "inherit",
                    "opacity": 1,
                    "outline": 0,
                    "padding": 0,
                    "width": "1px",
                  }
                }
                tabIndex="0"
                type="text"
                value=""
              />
              <div
                style={
                  Object {
                    "height": 0,
                    "left": 0,
                    "overflow": "scroll",
                    "position": "absolute",
                    "top": 0,
                    "visibility": "hidden",
                    "whiteSpace": "pre",
                  }
                }
              >
                
              </div>
            </div>
          </div>
        </div>
        <div
          className="css-1wy0on6 react-select__indicators"
        >
          <span
            className="css-ln5n5c react-select__indicator-separator"
          />
          <div
            aria-hidden="true"
            className="css-1ep9fjw react-select__indicator react-select__dropdown-indicator"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <svg
              aria-hidden="true"
              className="css-19bqh2r"
              focusable="false"
              height={20}
              viewBox="0 0 20 20"
              width={20}
            >
              <path
                d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Dropdown error 1`] = `
<div
  style={
    Object {
      "margin": "40px",
    }
  }
>
  <div>
    <div
      className="css-10nd86i sc-fjdhpX liBRBy"
      onKeyDown={[Function]}
    >
      <div
        className="css-vj8t7z react-select__control"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className="css-1hwfws3 react-select__value-container"
        >
          <div
            className="css-1492t68 react-select__placeholder"
          >
            Wybierz...
          </div>
          <div
            className="css-1g6gooi"
          >
            <div
              className="react-select__input"
              style={
                Object {
                  "display": "inline-block",
                }
              }
            >
              <input
                aria-autocomplete="list"
                autoCapitalize="none"
                autoComplete="off"
                autoCorrect="off"
                disabled={false}
                id="react-select-5-input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                spellCheck="false"
                style={
                  Object {
                    "background": 0,
                    "border": 0,
                    "boxSizing": "content-box",
                    "color": "inherit",
                    "fontSize": "inherit",
                    "opacity": 1,
                    "outline": 0,
                    "padding": 0,
                    "width": "1px",
                  }
                }
                tabIndex="0"
                type="text"
                value=""
              />
              <div
                style={
                  Object {
                    "height": 0,
                    "left": 0,
                    "overflow": "scroll",
                    "position": "absolute",
                    "top": 0,
                    "visibility": "hidden",
                    "whiteSpace": "pre",
                  }
                }
              >
                
              </div>
            </div>
          </div>
        </div>
        <div
          className="css-1wy0on6 react-select__indicators"
        >
          <span
            className="css-d8oujb react-select__indicator-separator"
          />
          <div
            aria-hidden="true"
            className="css-1ep9fjw react-select__indicator react-select__dropdown-indicator"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <svg
              aria-hidden="true"
              className="css-19bqh2r"
              focusable="false"
              height={20}
              viewBox="0 0 20 20"
              width={20}
            >
              <path
                d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      className="sc-iwsKbI bHwwIc"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-exclamation-circle fa-w-16 "
        data-icon="exclamation-circle"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
       
      <span>
        Error message
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Dropdown info 1`] = `
<div
  style={
    Object {
      "margin": "40px",
    }
  }
>
  <div>
    <div
      className="css-10nd86i sc-fjdhpX hIxaWA"
      onKeyDown={[Function]}
    >
      <div
        className="css-vj8t7z react-select__control"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className="css-1hwfws3 react-select__value-container"
        >
          <div
            className="css-1492t68 react-select__placeholder"
          >
            Wybierz...
          </div>
          <div
            className="css-1g6gooi"
          >
            <div
              className="react-select__input"
              style={
                Object {
                  "display": "inline-block",
                }
              }
            >
              <input
                aria-autocomplete="list"
                autoCapitalize="none"
                autoComplete="off"
                autoCorrect="off"
                disabled={false}
                id="react-select-4-input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                spellCheck="false"
                style={
                  Object {
                    "background": 0,
                    "border": 0,
                    "boxSizing": "content-box",
                    "color": "inherit",
                    "fontSize": "inherit",
                    "opacity": 1,
                    "outline": 0,
                    "padding": 0,
                    "width": "1px",
                  }
                }
                tabIndex="0"
                type="text"
                value=""
              />
              <div
                style={
                  Object {
                    "height": 0,
                    "left": 0,
                    "overflow": "scroll",
                    "position": "absolute",
                    "top": 0,
                    "visibility": "hidden",
                    "whiteSpace": "pre",
                  }
                }
              >
                
              </div>
            </div>
          </div>
        </div>
        <div
          className="css-1wy0on6 react-select__indicators"
        >
          <span
            className="css-d8oujb react-select__indicator-separator"
          />
          <div
            aria-hidden="true"
            className="css-1ep9fjw react-select__indicator react-select__dropdown-indicator"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <svg
              aria-hidden="true"
              className="css-19bqh2r"
              focusable="false"
              height={20}
              viewBox="0 0 20 20"
              width={20}
            >
              <path
                d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      className="sc-iwsKbI kCXkKZ"
    >
      <span>
        Additional info
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Dropdown multi 1`] = `
<div
  style={
    Object {
      "margin": "40px",
    }
  }
>
  <div>
    <div
      className="css-10nd86i sc-fjdhpX hIxaWA"
      onKeyDown={[Function]}
    >
      <div
        className="css-vj8t7z react-select__control"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className="css-1hwfws3 react-select__value-container react-select__value-container--is-multi"
        >
          <div
            className="css-1492t68 react-select__placeholder"
          >
            Wybierz...
          </div>
          <div
            className="css-1g6gooi"
          >
            <div
              className="react-select__input"
              style={
                Object {
                  "display": "inline-block",
                }
              }
            >
              <input
                aria-autocomplete="list"
                autoCapitalize="none"
                autoComplete="off"
                autoCorrect="off"
                disabled={false}
                id="react-select-8-input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                spellCheck="false"
                style={
                  Object {
                    "background": 0,
                    "border": 0,
                    "boxSizing": "content-box",
                    "color": "inherit",
                    "fontSize": "inherit",
                    "opacity": 1,
                    "outline": 0,
                    "padding": 0,
                    "width": "1px",
                  }
                }
                tabIndex="0"
                type="text"
                value=""
              />
              <div
                style={
                  Object {
                    "height": 0,
                    "left": 0,
                    "overflow": "scroll",
                    "position": "absolute",
                    "top": 0,
                    "visibility": "hidden",
                    "whiteSpace": "pre",
                  }
                }
              >
                
              </div>
            </div>
          </div>
        </div>
        <div
          className="css-1wy0on6 react-select__indicators"
        >
          <span
            className="css-d8oujb react-select__indicator-separator"
          />
          <div
            aria-hidden="true"
            className="css-1ep9fjw react-select__indicator react-select__dropdown-indicator"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <svg
              aria-hidden="true"
              className="css-19bqh2r"
              focusable="false"
              height={20}
              viewBox="0 0 20 20"
              width={20}
            >
              <path
                d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Dropdown w/ default 1`] = `
<div
  style={
    Object {
      "margin": "40px",
    }
  }
>
  <div>
    <div
      className="css-10nd86i sc-fjdhpX hIxaWA"
      onKeyDown={[Function]}
    >
      <div
        className="css-vj8t7z react-select__control"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className="css-1hwfws3 react-select__value-container react-select__value-container--has-value"
        >
          <div
            className="css-xp4uvy react-select__single-value"
          >
            DS
          </div>
          <div
            className="css-1g6gooi"
          >
            <div
              className="react-select__input"
              style={
                Object {
                  "display": "inline-block",
                }
              }
            >
              <input
                aria-autocomplete="list"
                autoCapitalize="none"
                autoComplete="off"
                autoCorrect="off"
                disabled={false}
                id="react-select-7-input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                spellCheck="false"
                style={
                  Object {
                    "background": 0,
                    "border": 0,
                    "boxSizing": "content-box",
                    "color": "inherit",
                    "fontSize": "inherit",
                    "opacity": 1,
                    "outline": 0,
                    "padding": 0,
                    "width": "1px",
                  }
                }
                tabIndex="0"
                type="text"
                value=""
              />
              <div
                style={
                  Object {
                    "height": 0,
                    "left": 0,
                    "overflow": "scroll",
                    "position": "absolute",
                    "top": 0,
                    "visibility": "hidden",
                    "whiteSpace": "pre",
                  }
                }
              >
                
              </div>
            </div>
          </div>
        </div>
        <div
          className="css-1wy0on6 react-select__indicators"
        >
          <span
            className="css-d8oujb react-select__indicator-separator"
          />
          <div
            aria-hidden="true"
            className="css-1ep9fjw react-select__indicator react-select__dropdown-indicator"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <svg
              aria-hidden="true"
              className="css-19bqh2r"
              focusable="false"
              height={20}
              viewBox="0 0 20 20"
              width={20}
            >
              <path
                d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots FileHandler basic 1`] = `
<div
  style={
    Object {
      "margin": "40px",
    }
  }
>
  <div />
</div>
`;

exports[`Storyshots Input basic 1`] = `
<div
  style={
    Object {
      "margin": "40px",
    }
  }
>
  <div>
    <div
      className="sc-gqjmRU dCpOwF"
    >
      <div
        className="sc-VigVT hHNGvK"
      />
      <input
        className="sc-gZMcBi ivIDqj"
        placeholder="Placeholder"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Input disabled + icon 1`] = `
<div
  style={
    Object {
      "margin": "40px",
    }
  }
>
  <div>
    <div
      className="sc-gqjmRU dCpOwF"
    >
      <div
        className="sc-VigVT iftfQh"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-search fa-w-16 "
          data-icon="search"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </div>
      <input
        className="sc-gZMcBi jGLzqV"
        disabled={true}
        placeholder="Placeholder"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Input disabled 1`] = `
<div
  style={
    Object {
      "margin": "40px",
    }
  }
>
  <div>
    <div
      className="sc-gqjmRU dCpOwF"
    >
      <div
        className="sc-VigVT iftfQh"
      />
      <input
        className="sc-gZMcBi ivIDqj"
        disabled={true}
        placeholder="Placeholder"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Input error 1`] = `
<div
  style={
    Object {
      "margin": "40px",
    }
  }
>
  <div>
    <div
      className="sc-gqjmRU dCpOwF"
    >
      <div
        className="sc-VigVT hHNGvK"
      />
      <input
        className="sc-gZMcBi inIBpF"
        placeholder="Placeholder"
      />
    </div>
    <div
      className="sc-iwsKbI bHwwIc"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-exclamation-circle fa-w-16 "
        data-icon="exclamation-circle"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
       
      <span>
        Error message
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Input icon 1`] = `
<div
  style={
    Object {
      "margin": "40px",
    }
  }
>
  <div>
    <div
      className="sc-gqjmRU dCpOwF"
    >
      <div
        className="sc-VigVT hHNGvK"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-search fa-w-16 "
          data-icon="search"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </div>
      <input
        className="sc-gZMcBi jGLzqV"
        placeholder="Placeholder"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Input info 1`] = `
<div
  style={
    Object {
      "margin": "40px",
    }
  }
>
  <div>
    <div
      className="sc-gqjmRU dCpOwF"
    >
      <div
        className="sc-VigVT hHNGvK"
      />
      <input
        className="sc-gZMcBi ivIDqj"
        placeholder="Placeholder"
      />
    </div>
    <div
      className="sc-iwsKbI kCXkKZ"
    >
      <span>
        Additional information
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots MultiTextInput basic 1`] = `
<div
  style={
    Object {
      "margin": "40px",
    }
  }
>
  <div>
    <div
      className="css-10nd86i sc-jzJRlG drjLBx"
      onKeyDown={[Function]}
    >
      <div
        className="css-vj8t7z react-select__control"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className="css-1hwfws3 react-select__value-container react-select__value-container--is-multi"
        >
          <div
            className="css-1492t68 react-select__placeholder"
          >
            Select...
          </div>
          <div
            className="css-1g6gooi"
          >
            <div
              className="react-select__input"
              style={
                Object {
                  "display": "inline-block",
                }
              }
            >
              <input
                aria-autocomplete="list"
                autoCapitalize="none"
                autoComplete="off"
                autoCorrect="off"
                disabled={false}
                id="react-select-9-input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                spellCheck="false"
                style={
                  Object {
                    "background": 0,
                    "border": 0,
                    "boxSizing": "content-box",
                    "color": "inherit",
                    "fontSize": "inherit",
                    "opacity": 1,
                    "outline": 0,
                    "padding": 0,
                    "width": "1px",
                  }
                }
                tabIndex="0"
                type="text"
                value=""
              />
              <div
                style={
                  Object {
                    "height": 0,
                    "left": 0,
                    "overflow": "scroll",
                    "position": "absolute",
                    "top": 0,
                    "visibility": "hidden",
                    "whiteSpace": "pre",
                  }
                }
              >
                
              </div>
            </div>
          </div>
        </div>
        <div
          className="css-1wy0on6 react-select__indicators"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots MultiTextInput custom placeholder 1`] = `
<div
  style={
    Object {
      "margin": "40px",
    }
  }
>
  <div>
    <div
      className="css-10nd86i sc-jzJRlG drjLBx"
      onKeyDown={[Function]}
    >
      <div
        className="css-vj8t7z react-select__control"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className="css-1hwfws3 react-select__value-container react-select__value-container--is-multi"
        >
          <div
            className="css-1492t68 react-select__placeholder"
          >
            Custom Placeholder Text
          </div>
          <div
            className="css-1g6gooi"
          >
            <div
              className="react-select__input"
              style={
                Object {
                  "display": "inline-block",
                }
              }
            >
              <input
                aria-autocomplete="list"
                autoCapitalize="none"
                autoComplete="off"
                autoCorrect="off"
                disabled={false}
                id="react-select-13-input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                spellCheck="false"
                style={
                  Object {
                    "background": 0,
                    "border": 0,
                    "boxSizing": "content-box",
                    "color": "inherit",
                    "fontSize": "inherit",
                    "opacity": 1,
                    "outline": 0,
                    "padding": 0,
                    "width": "1px",
                  }
                }
                tabIndex="0"
                type="text"
                value=""
              />
              <div
                style={
                  Object {
                    "height": 0,
                    "left": 0,
                    "overflow": "scroll",
                    "position": "absolute",
                    "top": 0,
                    "visibility": "hidden",
                    "whiteSpace": "pre",
                  }
                }
              >
                
              </div>
            </div>
          </div>
        </div>
        <div
          className="css-1wy0on6 react-select__indicators"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots MultiTextInput disabled 1`] = `
<div
  style={
    Object {
      "margin": "40px",
    }
  }
>
  <div>
    <div
      className="css-10nd86i sc-jzJRlG drjLBx"
      onKeyDown={[Function]}
    >
      <div
        className="css-vj8t7z react-select__control"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className="css-1hwfws3 react-select__value-container react-select__value-container--is-multi"
        >
          <div
            className="css-1492t68 react-select__placeholder"
          >
            Select...
          </div>
          <div
            className="css-1g6gooi"
          >
            <div
              className="react-select__input"
              style={
                Object {
                  "display": "inline-block",
                }
              }
            >
              <input
                aria-autocomplete="list"
                autoCapitalize="none"
                autoComplete="off"
                autoCorrect="off"
                disabled={false}
                id="react-select-10-input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                spellCheck="false"
                style={
                  Object {
                    "background": 0,
                    "border": 0,
                    "boxSizing": "content-box",
                    "color": "inherit",
                    "fontSize": "inherit",
                    "opacity": 1,
                    "outline": 0,
                    "padding": 0,
                    "width": "1px",
                  }
                }
                tabIndex="0"
                type="text"
                value=""
              />
              <div
                style={
                  Object {
                    "height": 0,
                    "left": 0,
                    "overflow": "scroll",
                    "position": "absolute",
                    "top": 0,
                    "visibility": "hidden",
                    "whiteSpace": "pre",
                  }
                }
              >
                
              </div>
            </div>
          </div>
        </div>
        <div
          className="css-1wy0on6 react-select__indicators"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots MultiTextInput error 1`] = `
<div
  style={
    Object {
      "margin": "40px",
    }
  }
>
  <div>
    <div
      className="css-10nd86i sc-jzJRlG drjLBx"
      onKeyDown={[Function]}
    >
      <div
        className="css-vj8t7z react-select__control"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className="css-1hwfws3 react-select__value-container react-select__value-container--is-multi"
        >
          <div
            className="css-1492t68 react-select__placeholder"
          >
            Select...
          </div>
          <div
            className="css-1g6gooi"
          >
            <div
              className="react-select__input"
              style={
                Object {
                  "display": "inline-block",
                }
              }
            >
              <input
                aria-autocomplete="list"
                autoCapitalize="none"
                autoComplete="off"
                autoCorrect="off"
                disabled={false}
                id="react-select-12-input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                spellCheck="false"
                style={
                  Object {
                    "background": 0,
                    "border": 0,
                    "boxSizing": "content-box",
                    "color": "inherit",
                    "fontSize": "inherit",
                    "opacity": 1,
                    "outline": 0,
                    "padding": 0,
                    "width": "1px",
                  }
                }
                tabIndex="0"
                type="text"
                value=""
              />
              <div
                style={
                  Object {
                    "height": 0,
                    "left": 0,
                    "overflow": "scroll",
                    "position": "absolute",
                    "top": 0,
                    "visibility": "hidden",
                    "whiteSpace": "pre",
                  }
                }
              >
                
              </div>
            </div>
          </div>
        </div>
        <div
          className="css-1wy0on6 react-select__indicators"
        />
      </div>
    </div>
    <div
      className="sc-iwsKbI bHwwIc"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-exclamation-circle fa-w-16 "
        data-icon="exclamation-circle"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
       
      <span>
        Error message
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots MultiTextInput info 1`] = `
<div
  style={
    Object {
      "margin": "40px",
    }
  }
>
  <div>
    <div
      className="css-10nd86i sc-jzJRlG drjLBx"
      onKeyDown={[Function]}
    >
      <div
        className="css-vj8t7z react-select__control"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className="css-1hwfws3 react-select__value-container react-select__value-container--is-multi"
        >
          <div
            className="css-1492t68 react-select__placeholder"
          >
            Select...
          </div>
          <div
            className="css-1g6gooi"
          >
            <div
              className="react-select__input"
              style={
                Object {
                  "display": "inline-block",
                }
              }
            >
              <input
                aria-autocomplete="list"
                autoCapitalize="none"
                autoComplete="off"
                autoCorrect="off"
                disabled={false}
                id="react-select-11-input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                spellCheck="false"
                style={
                  Object {
                    "background": 0,
                    "border": 0,
                    "boxSizing": "content-box",
                    "color": "inherit",
                    "fontSize": "inherit",
                    "opacity": 1,
                    "outline": 0,
                    "padding": 0,
                    "width": "1px",
                  }
                }
                tabIndex="0"
                type="text"
                value=""
              />
              <div
                style={
                  Object {
                    "height": 0,
                    "left": 0,
                    "overflow": "scroll",
                    "position": "absolute",
                    "top": 0,
                    "visibility": "hidden",
                    "whiteSpace": "pre",
                  }
                }
              >
                
              </div>
            </div>
          </div>
        </div>
        <div
          className="css-1wy0on6 react-select__indicators"
        />
      </div>
    </div>
    <div
      className="sc-iwsKbI kCXkKZ"
    >
      <span>
        Additional info
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Textarea basic 1`] = `
<div
  style={
    Object {
      "margin": "40px",
    }
  }
>
  <div>
    <textarea
      className="sc-jTzLTM ksJhBF"
      hasError={false}
      hasIcon={false}
      onChange={[Function]}
      placeholder="Placeholder"
      style={
        Object {
          "height": 0,
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots Textarea disabled 1`] = `
<div
  style={
    Object {
      "margin": "40px",
    }
  }
>
  <div>
    <textarea
      className="sc-jTzLTM ksJhBF"
      disabled={true}
      hasError={false}
      hasIcon={false}
      onChange={[Function]}
      placeholder="Placeholder"
      style={
        Object {
          "height": 0,
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots Textarea error 1`] = `
<div
  style={
    Object {
      "margin": "40px",
    }
  }
>
  <div>
    <textarea
      className="sc-jTzLTM cAFpBd"
      hasError={true}
      hasIcon={false}
      onChange={[Function]}
      placeholder="Placeholder"
      style={
        Object {
          "height": 0,
        }
      }
    />
    <div
      className="sc-iwsKbI bHwwIc"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-exclamation-circle fa-w-16 "
        data-icon="exclamation-circle"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
       
      <span>
        Error message
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Textarea info 1`] = `
<div
  style={
    Object {
      "margin": "40px",
    }
  }
>
  <div>
    <textarea
      className="sc-jTzLTM ksJhBF"
      hasError={false}
      hasIcon={false}
      onChange={[Function]}
      placeholder="Placeholder"
      style={
        Object {
          "height": 0,
        }
      }
    />
    <div
      className="sc-iwsKbI kCXkKZ"
    >
      <span>
        Additional information
      </span>
    </div>
  </div>
</div>
`;
